[package]
name = "bf-lib"
version = "0.2.1"
authors = ["techmccat <alessioa02004@gmail.com>"]
edition = "2018"
description = "A library to run brainfuck code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/techmccat/bf-lib"
keywords = ["brainfuck", "interpreter", "compiler"]
categories = ["command-line-utilities"]

[lib]
name = "bf_lib"
path = "src/lib.rs"

[[bin]]
name = "bf-bin"
path = "src/bin.rs"

[dependencies]
subprocess = "0.2.6"
rand = "0.7"
